[package]
name = "riscvm"
description = "Bare RISCV VM"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { version = "1.0", default-features = false }
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
getrandom = { version = "0.2", features = ["custom"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
risc0-zkvm-platform = { workspace = true }
risc0-zkp = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-core = { workspace = true }
rrs-lib = "0.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive" ] }

bincode = { version = "1.3" }
bytes = { version = "1.4", features = ["serde"] }
crypto-bigint = { version = "0.5", default-features = false, features = ["rand"] }
elf = { version = "0.7", default-features = false }
human-repr = { version = "1.0" }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
sha2 = { version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
typetag = { version = "0.2" }

[features]
default = ["std"]
std = [
  "anyhow/std",
  "hex/std",
  "num-traits/std",
  "risc0-binfmt/std",
  "serde/std",
  "sha2/std",
  "risc0-binfmt/std",
]
